# svebm

./: .flake8  .gitignore  Makefile  README.md  environment.yml  jobs.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: conf.yml  ptb_conf.yml  test_conf.yml  text_experiment.yml
scripts/: init.sh  requirements.py  train.sh
src/: collate.py  criterion.py  data.py  model.py  utils.py
src/data/: __init__.py  data_module.py  ptb_data.py
src/ebm/: ebm_model.py  unadjusted_langevin.py
src/posterior/: decoder_model.py  encoder_model.py
src/prior/: ebm_model.py  unadjusted_langevin.py
src/variational/: criterions.py  decoder_model.py  encoder_model.py  information_bottleneck.py  kl_annealing.py  latent_dist.py
tests/: test_criterion.py  test_data_module.py  test_ebm.py  test_kl_annealing.py  test_model.py  test_model_cli.py  test_variational.py
